Salesforce CPQ/main/default/objects/Theme__c/fields/HeaderSecondaryFontStyle__c.field-meta.xml
<CustomField>
    <fullName>HeaderSecondaryFontStyle__c</fullName>
    <inlineHelpText>Font style of page sub-header (Click the icon for additional information)</inlineHelpText>
    <label>Header Secondary Font Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
                <default>true</default>
                <label>normal</label>
            </value>
            <value>
                <fullName>italic</fullName>
            </value>
            <value>
                <fullName>oblique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>