Salesforce CPQ/main/default/objects/Theme__c/fields/HeaderTextDecoration__c.field-meta.xml
<CustomField>
    <fullName>HeaderTextDecoration__c</fullName>
    <inlineHelpText>Decoration added to text in page header (Click the icon for additional information)</inlineHelpText>
    <label>Header Text Decoration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>underline</fullName>
            </value>
            <value>
                <fullName>overline</fullName>
            </value>
            <value>
                <fullName>line-through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>