Salesforce CPQ/main/default/objects/Theme__c/fields/HyperlinkActiveColor__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkActiveColor__c</fullName>
    <inlineHelpText>Color of active links</inlineHelpText>
    <label>Hyperlink Active Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>