Salesforce CPQ/main/default/objects/Theme__c/fields/HyperlinkColor__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkColor__c</fullName>
    <inlineHelpText>Color of links</inlineHelpText>
    <label>Hyperlink Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>