Salesforce CPQ/main/default/objects/Theme__c/fields/HyperlinkDisabledColor__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkDisabledColor__c</fullName>
    <inlineHelpText>Color of disabled links</inlineHelpText>
    <label>Hyperlink Disabled Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>