Salesforce CPQ/main/default/objects/Theme__c/fields/HyperlinkHoverColor__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkHoverColor__c</fullName>
    <inlineHelpText>Hover color of links</inlineHelpText>
    <label>Hyperlink Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>