Salesforce CPQ/main/default/objects/Theme__c/fields/IconDisabledColor__c.field-meta.xml
<CustomField>
    <fullName>IconDisabledColor__c</fullName>
    <inlineHelpText>Color of disabled icons</inlineHelpText>
    <label>Icon Disabled Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>