Salesforce CPQ/main/default/objects/Theme__c/fields/IconFontColor__c.field-meta.xml
<CustomField>
    <fullName>IconFontColor__c</fullName>
    <inlineHelpText>Font color of icons</inlineHelpText>
    <label>Icon Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>