Salesforce CPQ/main/default/objects/Theme__c/fields/IconHoverColor__c.field-meta.xml
<CustomField>
    <fullName>IconHoverColor__c</fullName>
    <inlineHelpText>Hover color of icons</inlineHelpText>
    <label>Icon Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>