Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileCopyBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileCopyBackgroundColor__c</fullName>
    <inlineHelpText>Background color of copy mobile icon</inlineHelpText>
    <label>Mobile Copy Icon Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>