Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileDeleteBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileDeleteBackgroundColor__c</fullName>
    <inlineHelpText>Background color of delete mobile icon</inlineHelpText>
    <label>Mobile Delete Icon Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>