Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileLineActionColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileLineActionColor__c</fullName>
    <inlineHelpText>Color of mobile line action icons</inlineHelpText>
    <label>Mobile Line Action Icon Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>