Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileStarBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileStarBackgroundColor__c</fullName>
    <inlineHelpText>Background color of star mobile icon</inlineHelpText>
    <label>Mobile Star Icon Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>