Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileStarFillColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileStarFillColor__c</fullName>
    <inlineHelpText>Fill color of star mobile icon</inlineHelpText>
    <label>Mobile Star Icon Fill Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>