Salesforce CPQ/main/default/objects/Theme__c/fields/IconMobileWandBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>IconMobileWandBackgroundColor__c</fullName>
    <inlineHelpText>Background color of wand mobile icon</inlineHelpText>
    <label>Mobile Wand Icon Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>