Salesforce CPQ/main/default/objects/Theme__c/fields/IconPageLoadingColor__c.field-meta.xml
<CustomField>
    <fullName>IconPageLoadingColor__c</fullName>
    <inlineHelpText>Color of page loading icon</inlineHelpText>
    <label>Page Loading Icon Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>