Salesforce CPQ/main/default/objects/Theme__c/fields/InputOutlineColor__c.field-meta.xml
<CustomField>
    <fullName>InputOutlineColor__c</fullName>
    <inlineHelpText>Outline color of input forms on focus</inlineHelpText>
    <label>Input Outline Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>