Salesforce CPQ/main/default/objects/Theme__c/fields/InputOutlineWidth__c.field-meta.xml
<CustomField>
    <fullName>InputOutlineWidth__c</fullName>
    <inlineHelpText>Outline width of input forms on focus</inlineHelpText>
    <label>Input Outline Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>