Salesforce CPQ/main/default/objects/Theme__c/fields/LoadingMaskColor__c.field-meta.xml
<CustomField>
    <fullName>LoadingMaskColor__c</fullName>
    <inlineHelpText>Color of loading mask when navigating to a new page</inlineHelpText>
    <label>Loading Mask Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>