Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerColor__c</fullName>
    <inlineHelpText>Background color of navigation side panels</inlineHelpText>
    <label>Navigation Drawer Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>