Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerFontColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerFontColor__c</fullName>
    <inlineHelpText>Font color of navigation side panels</inlineHelpText>
    <label>Navigation Drawer Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>