Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerHeaderColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerHeaderColor__c</fullName>
    <inlineHelpText>Background color of navigation side panel headers</inlineHelpText>
    <label>Navigation Drawer Header Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>