Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerHeaderFontColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerHeaderFontColor__c</fullName>
    <inlineHelpText>Font color of navigation side panel headers</inlineHelpText>
    <label>Navigation Drawer Header Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>