Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerRowColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerRowColor__c</fullName>
    <inlineHelpText>Background color of rows in navigation side panels</inlineHelpText>
    <label>Navigation Drawer Row Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>