Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerRowHoverColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerRowHoverColor__c</fullName>
    <inlineHelpText>Background color of hovered rows in navigation side panels</inlineHelpText>
    <label>Navigation Drawer Row Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>