Salesforce CPQ/main/default/objects/Theme__c/fields/NavigationDrawerRowSelectedColor__c.field-meta.xml
<CustomField>
    <fullName>NavigationDrawerRowSelectedColor__c</fullName>
    <inlineHelpText>Background color of selected row in navigation side panels</inlineHelpText>
    <label>Navigation Drawer Row Selected Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>