Salesforce CPQ/main/default/objects/Theme__c/fields/ParentLineRowFontStyle__c.field-meta.xml
<CustomField>
    <fullName>ParentLineRowFontStyle__c</fullName>
    <inlineHelpText>Font style of parent line rows in quote line editor (Click the icon for additional information)</inlineHelpText>
    <label>Parent Line Row Font Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>normal</fullName>
                <default>true</default>
                <label>normal</label>
            </value>
            <value>
                <fullName>italic</fullName>
            </value>
            <value>
                <fullName>oblique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>