Salesforce CPQ/main/default/objects/Theme__c/fields/PrimaryButtonColor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryButtonColor__c</fullName>
    <inlineHelpText>Color of brand buttons</inlineHelpText>
    <label>Brand Button Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>