Salesforce CPQ/main/default/objects/Theme__c/fields/PrimaryButtonFontColor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryButtonFontColor__c</fullName>
    <inlineHelpText>Font color of brand buttons</inlineHelpText>
    <label>Brand Button Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>