Salesforce CPQ/main/default/objects/Theme__c/fields/PrimaryButtonHoverColor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryButtonHoverColor__c</fullName>
    <inlineHelpText>Hover color of brand buttons</inlineHelpText>
    <label>Brand Button Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>