Salesforce CPQ/main/default/objects/Theme__c/fields/RadioButtonColorChecked__c.field-meta.xml
<CustomField>
    <fullName>RadioButtonColorChecked__c</fullName>
    <inlineHelpText>Color of selected radio button</inlineHelpText>
    <label>Radio Button Color Checked</label>
    <length>23</length>
    <type>Text</type>
</CustomField>