Salesforce CPQ/main/default/objects/Theme__c/fields/RadioButtonColorUnchecked__c.field-meta.xml
<CustomField>
    <fullName>RadioButtonColorUnchecked__c</fullName>
    <inlineHelpText>Color of unselected radio button</inlineHelpText>
    <label>Radio Button Color Unchecked</label>
    <length>23</length>
    <type>Text</type>
</CustomField>