Salesforce CPQ/main/default/objects/Theme__c/fields/SecondaryFontColor__c.field-meta.xml
<CustomField>
    <fullName>SecondaryFontColor__c</fullName>
    <label>Secondary Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>