Salesforce CPQ/main/default/objects/Theme__c/fields/SecondaryHeaderColor__c.field-meta.xml
<CustomField>
    <fullName>SecondaryHeaderColor__c</fullName>
    <label>Secondary Header Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>