Salesforce CPQ/main/default/objects/Theme__c/fields/SelectBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SelectBackgroundColor__c</fullName>
    <inlineHelpText>Background color of drop-down menus</inlineHelpText>
    <label>Picklist Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>