Salesforce CPQ/main/default/objects/Theme__c/fields/SelectBorderColor__c.field-meta.xml
<CustomField>
    <fullName>SelectBorderColor__c</fullName>
    <inlineHelpText>Border color of drop-down menus</inlineHelpText>
    <label>Picklist Border Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>