Salesforce CPQ/main/default/objects/Theme__c/fields/SelectBorderRadius__c.field-meta.xml
<CustomField>
    <fullName>SelectBorderRadius__c</fullName>
    <inlineHelpText>Border radius of drop-down menus</inlineHelpText>
    <label>Picklist Border Radius</label>
    <length>10</length>
    <type>Text</type>
</CustomField>