Salesforce CPQ/main/default/objects/Theme__c/fields/SelectBorderWidth__c.field-meta.xml
<CustomField>
    <fullName>SelectBorderWidth__c</fullName>
    <inlineHelpText>Border width of drop-down menus</inlineHelpText>
    <label>Picklist Border Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>