Salesforce CPQ/main/default/objects/Theme__c/fields/SelectContractHideSkipActionOnAmend__c.field-meta.xml
<CustomField>
    <fullName>SelectContractHideSkipActionOnAmend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will hide the Skip action button on the contract selector page for amend workflow</description>
    <inlineHelpText>If checked, will hide the Skip action button on the contract selector page for amend workflow</inlineHelpText>
    <label>Hide Skip Action (Amend Workflow)</label>
    <type>Checkbox</type>
</CustomField>