Salesforce CPQ/main/default/objects/Theme__c/fields/SelectHeight__c.field-meta.xml
<CustomField>
    <fullName>SelectHeight__c</fullName>
    <inlineHelpText>Height of drop-down menus</inlineHelpText>
    <label>Picklist Border Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>