Salesforce CPQ/main/default/objects/Theme__c/fields/SelectPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SelectPaddingBottom__c</fullName>
    <inlineHelpText>Bottom padding of drop-down menus</inlineHelpText>
    <label>Picklist Bottom Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>