Salesforce CPQ/main/default/objects/Theme__c/fields/SelectPaddingLeft__c.field-meta.xml
<CustomField>
    <fullName>SelectPaddingLeft__c</fullName>
    <inlineHelpText>Left padding of drop-down menus</inlineHelpText>
    <label>Picklist Left Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>