Salesforce CPQ/main/default/objects/Theme__c/fields/SelectPaddingRight__c.field-meta.xml
<CustomField>
    <fullName>SelectPaddingRight__c</fullName>
    <inlineHelpText>Right padding of drop-down menus</inlineHelpText>
    <label>Picklist Right Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>