Salesforce CPQ/main/default/objects/Theme__c/fields/SelectPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SelectPaddingTop__c</fullName>
    <inlineHelpText>Top padding of drop-down menus</inlineHelpText>
    <label>Picklist Top Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>