Salesforce CPQ/main/default/objects/Theme__c/fields/StandaloneProductRowTextDecoration__c.field-meta.xml
<CustomField>
    <fullName>StandaloneProductRowTextDecoration__c</fullName>
    <inlineHelpText>Decoration added to text in standalone product rows in quote line editor (Click the icon for additional information)</inlineHelpText>
    <label>Standalone Product Row Text Decoration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>underline</fullName>
            </value>
            <value>
                <fullName>overline</fullName>
            </value>
            <value>
                <fullName>line-through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>