Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonDisabledBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonDisabledBackgroundColor__c</fullName>
    <inlineHelpText>Background color of disabled standard buttons</inlineHelpText>
    <label>Standard Button Disabled Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>