Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonFontSize__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonFontSize__c</fullName>
    <inlineHelpText>Font size of standard buttons</inlineHelpText>
    <label>Standard Button Font Size</label>
    <length>23</length>
    <type>Text</type>
</CustomField>