Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonPaddingBottom__c</fullName>
    <inlineHelpText>Bottom padding of standard buttons</inlineHelpText>
    <label>Standard Button Bottom Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>