Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonPaddingLeft__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonPaddingLeft__c</fullName>
    <inlineHelpText>Left padding of standard buttons</inlineHelpText>
    <label>Standard Button Left Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>