Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonPaddingRight__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonPaddingRight__c</fullName>
    <inlineHelpText>Right padding of standard buttons</inlineHelpText>
    <label>Standard Button Right Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>