Salesforce CPQ/main/default/objects/Theme__c/fields/StandardButtonPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>StandardButtonPaddingTop__c</fullName>
    <inlineHelpText>Top padding of standard buttons</inlineHelpText>
    <label>Standard Button Top Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>