Salesforce CPQ/main/default/objects/Theme__c/fields/TabColor__c.field-meta.xml
<CustomField>
    <fullName>TabColor__c</fullName>
    <inlineHelpText>Color of tabs</inlineHelpText>
    <label>Tab Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>